<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_detail_scene">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/file_name_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_name"
            app:layout_constraintTop_toTopOf="@+id/label_name"
            tools:text="http://schemas.android.com/apk/res-auto" />

        <TextView
            android:id="@+id/label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_status_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/label_name"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginTop="24dp"
            />

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:text="SUCCESSFULL"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/label_status"
            app:layout_constraintTop_toTopOf="@id/label_status"
            />

        <Button
            android:id="@+id/ok_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_btn_txt"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"/>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>

