<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="xmlViewModel"
            type="com.example.downloader.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment"
        android:focusable="true"
        android:focusedByDefault="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/edit_text_txt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toTopOf="@+id/radio_group"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_content_paste_24"
            app:endIconContentDescription="paste icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textUri"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <RadioButton
                android:id="@+id/radio_btn_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/glide_txt" />
            <RadioButton
                android:id="@+id/radio_btn_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/udacity_txt" />
            <RadioButton
                android:id="@+id/radio_btn_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/retrofit_txt" />
        </RadioGroup>
        <!--
        <Button
            android:id="@+id/download_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text"
            android:onClick="@{()-> xmlViewModel.btnClicked()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />
            -->
        <com.example.downloader.CustomButton
            android:id="@+id/custom_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:backgroundColor="@color/secondaryColor"
            app:downloadingBackgroundColor="@color/purple_700"
            app:circleColor="@color/yellow"
            app:textColor="@color/white"
            app:text="Download"
            android:onClick="@{()-> xmlViewModel.btnClicked()}"
            app:downloadText="In progress..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
